--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.main.allow-bean-definition-overriding=true
